Stroke vertices that are selected in Edit Mode become Sample Simplified when their strokes are Automerged in Draw Mode #94804

Closed
opened 2022-01-10 23:11:44 +01:00 by Matthew Gafford · 5 comments

Operating system: Win10
Graphics card: RTX3070

Broken: 3.0.0
Worked: N/A

Short Description
Any lines that have vertices selected in Edit Mode are Sample-Simplified upon Automerge. It's worse the closer to the GP Object that you are.

Stroke vertices selected in Edit Mode
image.png

AutoMerged after drawing a stroke to connect them
image.png

New geometry in Edit Mode
image.png

Steps to Reproduce

  1. Switch to Draw Mode and draw a stroke to Automerge the two lines
  2. Go back to Edit Mode and see the geometry difference.
    Test File:
    AutoMergeCausesLinesToLoseResolution.blend
Operating system: Win10 Graphics card: RTX3070 Broken: 3.0.0 Worked: N/A **Short Description** Any lines that have vertices selected in Edit Mode are Sample-Simplified upon Automerge. It's worse the closer to the GP Object that you are. Stroke vertices selected in Edit Mode ![image.png](https://archive.blender.org/developer/F12800042/image.png) AutoMerged after drawing a stroke to connect them ![image.png](https://archive.blender.org/developer/F12800044/image.png) New geometry in Edit Mode ![image.png](https://archive.blender.org/developer/F12800047/image.png) **Steps to Reproduce** 1. Switch to Draw Mode and draw a stroke to Automerge the two lines 2. Go back to Edit Mode and see the geometry difference. Test File: [AutoMergeCausesLinesToLoseResolution.blend](https://archive.blender.org/developer/F12800055/AutoMergeCausesLinesToLoseResolution.blend)

Added subscriber: @AFoxInSpace

Added subscriber: @AFoxInSpace
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Antonio Vazquez self-assigned this 2022-01-11 18:46:58 +01:00

This issue was referenced by 8cff1ecf9f

This issue was referenced by 8cff1ecf9fd5aad79c695de0532cc399b66874a6

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94804
No description provided.