Fix T94804: GPencil Simplify when strokes are Automerged in Draw Mode

The problem was the points were selected in edit mode and then sampled. Now, in draw mode, the points are always unselected to avoid this effect in the auto merge process.